# music-theory

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cicd.yml  run_unit_tests.yml
doc/: README.md
doc/design/: 01-note-duration.md  02-nontertian-support.md
ex/: chart.c  quartal.c  quintal.c
inc/: mahler.h
src/chord/: chord.c
src/err/: err.c  err.h
src/inter/: inter.c
src/key/: key.c
src/misc/: misc.c
src/nontertian/: quartal.c  quartal.h  quintal.c  quintal.h
src/note/: note.c  note.h
src/rhythm/: rhythm.c  rhythm.h
src/scale/: scale.c
src/shared/: shared.h
test/: macros.h  test.c
test/suites/chord/: mah_get_chord.test  mah_invert_chord.test  mah_return_chord.test
test/suites/inter/: mah_get_inter.test  mah_return_inter.test
test/suites/key/: mah_get_key_relative.test  mah_get_key_sig.test  mah_query_acci.test  mah_return_key_sig.test
test/suites/misc/: mah_is_enharmonic.test  mah_write_note.test
test/suites/nontertian/: mah_fold_nontertian_chord.test  mah_get_quartal_chord.test  mah_get_quintal_chord.test  mah_invert_nontertian_chord.test
test/suites/note/: mah_duration.test  mah_note_functions.test
test/suites/rhythm/: mah_time_sig.test
test/suites/scale/: mah_get_scale.test  mah_return_scale.test
